<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/resultRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:fontFamily="@font/lato_bold"
            android:gravity="end"
            android:paddingStart="@dimen/padding_y"
            android:paddingEnd="@dimen/padding_y"
            android:text="@string/zero_character"
            android:textColor="@color/white"
            android:textSize="@dimen/result_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifthRowLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fourthRowLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultRowLayout">

        <Button
            android:id="@+id/clearButton"
            style="?android:attr/buttonBarButtonStyle"
            android:tag="clear"
            android:text="@string/clear_icon" />

        <Button
            android:id="@+id/deleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_light_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="delete"
            android:text="@string/delete_icon"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/percentButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_light_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="percent"
            android:text="@string/percent_icon"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/divideButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_orange"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="division"
            android:text="@string/divide_icon"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthRowLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/thirdRowLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fifthRowLayout">

        <Button
            android:id="@+id/sevenButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="7"
            android:text="@string/seven_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/eightButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="8"
            android:text="@string/eight_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/nineButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="9"
            android:text="@string/nine_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/multiplicationButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_orange"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="multiplication"
            android:text="@string/multiplication_icon"

            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRowLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/secondRowLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthRowLayout">

        <Button
            android:id="@+id/fourButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="4"
            android:text="@string/four_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/fiveButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="5"
            android:text="@string/five_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/sixButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="6"
            android:text="@string/six_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/minusButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_orange"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="subtraction"
            android:text="@string/minus_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRowLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/firstRowLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdRowLayout">

        <Button
            android:id="@+id/oneButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="1"
            android:text="@string/one_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/twoButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="2"
            android:text="@string/two_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/threeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="3"
            android:text="@string/three_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/plusButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_orange"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="addition"
            android:text="@string/plus_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/firstRowLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondRowLayout">

        <Button
            android:id="@+id/plusMinusButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_light_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="plus_minus"
            android:text="@string/plus_minus_icon"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/zeroButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="0"
            android:text="@string/zero_character"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/decimalButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_dark_grey"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="."
            android:text="@string/dot_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/equalsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_marginStart="@dimen/margin_x"
            android:layout_marginEnd="@dimen/margin_x"
            android:layout_weight="1"
            android:backgroundTint="@color/bg_orange"
            android:fontFamily="@font/fa_solid_900"
            android:paddingStart="@dimen/padding_x"
            android:paddingEnd="@dimen/padding_x"
            android:tag="equals"
            android:text="@string/equals_icon"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>